# bardzo-dobry-sklep-muzyczny

./: .gitignore  README.md  docker-compose.yml
client/: .eslintrc.cjs  .prettierrc.json  codegen.js  example.env  index.html  package.json  (+3 more)
server/: .gitignore  manage.py  pyproject.toml
server/muzyczny/: schema.py  settings.py  urls.py
server/muzyczny/accounts/: schema.py  types.py
server/muzyczny/accounts/admin/: __init__.py  user.py
server/muzyczny/accounts/migrations/: 0001_initial.py  0002_user_city_user_first_login_user_postal_code_and_more.py  0003_user_phone_number.py
server/muzyczny/accounts/models/: user.py
server/muzyczny/orders/: schema.py  types.py
server/muzyczny/orders/admin/: __init__.py
server/muzyczny/orders/migrations/: 0001_initial.py  0002_order_approved_by_order_approved_datetime_and_more.py  0003_remove_order_name_remove_order_product_and_more.py  0004_remove_order_amount_remove_order_value.py  0005_remove_order_order_items_orderitem_order.py
server/muzyczny/orders/models/: __init__.py  order.py
server/muzyczny/products/: schema.py  types.py
server/muzyczny/products/admin/: __init__.py
server/muzyczny/products/migrations/: 0001_initial.py  0002_category_slug.py  0003_product_author.py  0004_category_category_type_product_release_date_and_more.py  0005_product_discontinued_alter_product_price.py  0006_product_image.py
server/muzyczny/products/models/: __init__.py  categories.py  product.py
server/muzyczny/utils/: auth_middleware.py  permissions.py
server/server/: settings.py
server/templates/admin/: login.html
(+39 files in other folders)
